--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,11 @@
     "password": "Password",
     "count": "Count",
     "percentage": "Percentage",
-    "enter": "Enter"
+    "enter": "Enter",
+    "showing": "Showing",
+    "of": "of",
+    "previous": "Previous",
+    "next": "Next"
   },
   "header": {
     "search": "Search",
@@ -42,6 +46,8 @@
     "apartmentGroups": "Apartment Groups",
     "buildingServiceFee": "Service Fee",
     "buildingManagement": "Building Management",
+    "userRights": "Rights",
+    "userPermissions": "Permissions",
     "profile": "Profile"
   },
   "buttons": {
@@ -50,7 +56,9 @@
     "cancel": "Cancel",
     "save": "Save",
     "edit": "Edit",
-    "apply": "Apply"
+    "apply": "Apply",
+    "close": "Close",
+    "delete": "Delete"
   },
   "dashboard": {
     "homeTitle1": "Overview",
@@ -285,6 +293,16 @@
       "serviceName": "Service name",
       "enter": "Enter"
     },
+    "view": {
+      "title": "Invoice Details"
+    },
+    "edit": {
+      "title": "Edit Invoice"
+    },
+    "delete": {
+      "title": "Delete Invoice",
+      "message": "Are you sure you want to delete this invoice"
+    },
     "actions": {
       "search": "Search",
       "add": "Add",
@@ -345,6 +363,16 @@
       "apartment": "Apartment",
       "status": "Status",
       "enter": "Enter"
+    },
+    "view": {
+      "title": "Payment Details"
+    },
+    "edit": {
+      "title": "Edit Payment"
+    },
+    "delete": {
+      "title": "Delete Payment",
+      "message": "Are you sure you want to delete this payment"
     },
     "actions": {
       "search": "Search",
@@ -429,7 +457,8 @@
       "title": "Balances",
       "totalDepositBalance": "TOTAL DEPOSIT BALANCE",
       "depositWithdrawn": "DEPOSIT WITHDRAWN FROM CUSTOMER DEBT (By date range)",
-      "previousMonthBalances": "PREVIOUS MONTH BALANCES"
+      "previousMonthBalances": "PREVIOUS MONTH BALANCES",
+      "currentMonthEndBalance": "CURRENT MONTH END BALANCE"
     },
     "profitLoss": {
       "title": "Profit / Loss and Cash / Bank",
@@ -441,9 +470,18 @@
       "periodPaid": "PERIOD PAID",
       "cashBankBalance": "CASH AND BANK BALANCE",
       "centralDebt": "CENTRAL DEBT-(Receivable)",
+      "centralDebtValue": "CENTRAL DEBT-(Receivable)",
       "cashAndBank": "CASH AND BANK",
       "receivableFromMainOffice": "RECEIVABLE FROM MAIN OFFICE",
       "totalAssets": "TOTAL ASSETS"
+    },
+    "residentsReceivables": {
+      "title": "RECEIVABLES FROM RESIDENTS",
+      "dateRange": "Selected date range",
+      "totalApartments": "Total number of apartments",
+      "indebtedApartments": "Number of indebted apartments",
+      "indebtedInvoices": "Number of indebted invoices",
+      "debtAmount": "Debt amount (AZN)"
     }
   },
   "debtorApartments": {
@@ -457,6 +495,17 @@
       "owner": "Apartment owner",
       "status": "Status",
       "enter": "Enter"
+    },
+    "view": {
+      "title": "Debtor Apartment Details"
+    },
+    "pay": {
+      "title": "Pay Debt",
+      "amount": "Payment Amount"
+    },
+    "invoices": {
+      "title": "Invoices",
+      "message": "Invoice list for"
     },
     "actions": {
       "search": "Search",
@@ -517,6 +566,13 @@
     },
     "edit": {
       "title": "Edit expense"
+    },
+    "view": {
+      "title": "Expense Details"
+    },
+    "delete": {
+      "title": "Delete Expense",
+      "message": "Are you sure you want to delete this expense"
     },
     "actions": {
       "search": "Search",
@@ -1166,6 +1222,45 @@
       "resident": "Resident",
       "complex": "Complex",
       "building": "Building"
+    }
+  },
+  "userRights": {
+    "pageTitle": "User Rights",
+    "subtitle": "Manage user roles and permissions",
+    "loading": "Loading...",
+    "rights": {
+      "title": "Rights",
+      "total": "Total",
+      "role": "role",
+      "create": "Create Right",
+      "managePermissions": "Manage Permissions",
+      "createModal": {
+        "title": "Create New Right",
+        "name": "Right name"
+      },
+      "editModal": {
+        "title": "Edit Right",
+        "name": "Right name"
+      }
+    },
+    "permissions": {
+      "title": "Permissions",
+      "total": "Total",
+      "permission": "permission"
+    }
+  },
+  "userPermissions": {
+    "pageTitle": "Permissions",
+    "subtitle": "Manage user permissions",
+    "loading": "Loading...",
+    "search": "Search...",
+    "selectRight": "Select Right",
+    "backToRights": "Back to Rights",
+    "savePermissions": "Save Permissions",
+    "permissions": {
+      "title": "Permissions",
+      "total": "Total",
+      "permission": "permission"
     }
   },
   "profile": {
