--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -40,6 +40,7 @@
     "mtk": "ТСЖ",
     "complexes": "Комплексы",
     "residents": "Жители",
+    "resident": "Житель",
     "buildings": "Здания",
     "properties": "Квартиры",
     "blocks": "Блоки",
@@ -643,6 +644,13 @@
     "edit": {
       "title": "Редактировать депозит"
     },
+    "view": {
+      "title": "Детали депозита"
+    },
+    "delete": {
+      "title": "Удалить депозит",
+      "message": "Вы уверены, что хотите удалить этот депозит"
+    },
     "actions": {
       "search": "Поиск",
       "add": "Добавить",
@@ -709,6 +717,13 @@
     "edit": {
       "title": "Редактировать перевод"
     },
+    "view": {
+      "title": "Детали перевода"
+    },
+    "delete": {
+      "title": "Удалить перевод",
+      "message": "Вы уверены, что хотите удалить этот перевод"
+    },
     "actions": {
       "search": "Поиск",
       "add": "Добавить",
@@ -773,6 +788,13 @@
     },
     "edit": {
       "title": "Редактировать обязательство"
+    },
+    "view": {
+      "title": "Детали обязательства"
+    },
+    "delete": {
+      "title": "Удалить обязательство",
+      "message": "Вы уверены, что хотите удалить это обязательство"
     },
     "actions": {
       "search": "Поиск",
@@ -1462,5 +1484,19 @@
         "action": "Действие"
       }
     }
+  },
+  "residentDashboard": {
+    "pageTitle": "Панель жильца",
+    "welcome": "Добро пожаловать",
+    "totalInvoices": "Всего счетов",
+    "unpaidInvoices": "Неоплаченные счета",
+    "totalApplications": "Всего заявок",
+    "pendingApplications": "Ожидающие заявки",
+    "unreadNotifications": "Непрочитанные уведомления",
+    "totalDebt": "Общий долг",
+    "quickActions": "Быстрые действия",
+    "viewInvoices": "Просмотр счетов",
+    "viewApplications": "Просмотр заявок",
+    "viewNotifications": "Просмотр уведомлений"
   }
 }
